# BasicQtProject

./: CMakeLists.txt  clang_format.sh  run_cmake.sh
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
